[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scenes/screens/evolution_animation_screen.gd" id="1"]
[ext_resource type="Theme" path="res://ui/theme/game_theme.tres" id="2"]
[ext_resource type="PackedScene" path="res://ui/battle_hud/battle_message_box.tscn" id="3"]
[ext_resource type="Shader" path="res://ui/shaders/white_flash.gdshader" id="4"]

[sub_resource type="ShaderMaterial" id="shader_mat"]
shader = ExtResource("4")
shader_parameter/whiteness = 0.0

[node name="EvolutionAnimationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.035, 0.035, 0.043, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopSpacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpriteCenterContainer" type="CenterContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="SpriteRect" type="TextureRect" parent="MarginContainer/VBox/SpriteCenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(256, 256)
material = SubResource("shader_mat")
expand_mode = 1
stretch_mode = 5

[node name="BottomSpacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessageBox" parent="MarginContainer/VBox" instance=ExtResource("3")]
visible = false
layout_mode = 2
